; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/keebio/iris/keymaps/wanleg/extr_keymap.c_matrix_init_keymap.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/keebio/iris/keymaps/wanleg/extr_keymap.c_matrix_init_keymap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DDRD = common dso_local global i32 0, align 4
@PORTD = common dso_local global i32 0, align 4
@DDRB = common dso_local global i32 0, align 4
@PORTB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @matrix_init_keymap() #0 {
  %1 = load i32, i32* @DDRD, align 4
  %2 = and i32 %1, -33
  store i32 %2, i32* @DDRD, align 4
  %3 = load i32, i32* @PORTD, align 4
  %4 = and i32 %3, -33
  store i32 %4, i32* @PORTD, align 4
  %5 = load i32, i32* @DDRB, align 4
  %6 = and i32 %5, -2
  store i32 %6, i32* @DDRB, align 4
  %7 = load i32, i32* @PORTB, align 4
  %8 = and i32 %7, -2
  store i32 %8, i32* @PORTB, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
